
    * wx.Bitmap SetQuality and GetQuality methods

    * The wx.GetNumberFromUser function

    * wx.EVT_LIST_GET_INFO and wx.EVT_LIST_SET_INFO

    * wx.BookCtrlSizer and wx.NotebookSizer

    * The PostScript-specific methods of wx.PrintData

    * wx.PrintDialogData SetSetupDialog and GetSetupDialog methods

    * wx.FontMapper SetConfig method

wx.EventLoop is now implemented for wxMac.




2.6.3.0
-------

Change the wx.ListCtrl InsertStringItem wrapper to use the form that
takes an imageIndex, and set the default to -1.  This ensures that on
wxMSW that if there is an image list but they don't specify an image,
the native control doesn't use one anyway.

wxMSW: wx.ListCtrl in report mode is now able to support images in
other columns besides the first one.  Simply pass an image index to
SetStringItem.  For virtual list controls you can specify the image to
use on the extra columns by overriding OnGetItemColumnImage in your
derived class.  It is passed the item number and the column number as
parameters, and the default version simply calls OnGetItemImage for
column zero, or returns -1 for other columns.




2.6.2.1
-------
* 10-Jan-2006

wxMSW: Fix for bug #1211907, popup menu indenting inconsistent with
bitmaps.

wxMac: Don't send an event for wx.RadioButton deselections, just the
selections.  This was done to make it consistent with the other
platforms.

wxMSW: Always set flat toolbar style, even under XP with themes: this
is necessary or separators aren't shown at all.

Fixes for bug #1217872, pydocview.DocService not correctly initialized.

Fix for bug #1217874, Error in parameter name in DocManager.CreateView.

Added wrappers for the wx.RendererNative class.

Added the wx.lib.splitter module, which contains the
MultiSplitterWindow class.  This class is much like the standard
wx.SplitterWindow class, except it allows more than one split, so it
can manage more than two child windows.

Docview and IDE patch from Morgan Hua with fix for bug #1217890